--- a/content/scss/site/_svg.scss
+++ b/content/scss/site/_svg.scss
@@ -12,11 +12,11 @@ a {
 }
 
 //global settings for svgs
-svg {
-	path {
-		stroke-linecap: butt;
-	}
-}
+// svg {
+// 	path {
+// 		stroke-linecap: butt;
+// 	}
+// }
 
 
 
