--- a/content/scss/site/_variables.scss
+++ b/content/scss/site/_variables.scss
@@ -3,4 +3,5 @@ $navbar-font-size:18px;
 
 $states-blue:#2072B2;
 $states-orange: #FF5F1F;
+$states-orange-faded:rgba(255, 95, 31, .54);
 $states-green: #76E31C;
